--- a/Daily_Planner/app/views/perfil.html
+++ b/Daily_Planner/app/views/perfil.html
@@ -321,13 +321,13 @@
     <div class="dashboard-container">
         <aside class="sidebar">
             <div class="user-profile">
-                <img src="https://via.placeholder.com/80" alt="Foto do usuário" class="profile-pic">
+                <img src="../img/foto perfil/perfil 1.svg" alt="Foto do usuário" class="profile-pic">
                 <h3 id="username">Nome do Usuário</h3>
                 <p id="user-email">usuario@email.com</p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#"><i class="fas fa-home"></i> Início</a></li>
+                    <li class="dashboard"><a href="dashboard.html" onclick="redirectToIndex()"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#"><i class="fas fa-user"></i> Perfil</a></li>
                     <li><a href="#"><i class="fas fa-cog"></i> Configurações</a></li>
                     <li class="logout"><a href="#" onclick="redirectToIndex()"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
